--- a/home.html
+++ b/home.html
@@ -9,10 +9,25 @@
             background-color: #f4f4f4;
             height: 100%;
         }
-        h1 {
+        #header{
+            border-radius: 10px;
+            height: 50px;
+            display: flex;
+            width: 98%;
+            background-color: #655959;
+        }
+        #header h1 {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             text-align: center;
             text-decoration: none;
+            color: white;
+            margin-top: 6px;
+            text-align: center;
+            margin-left: 20px;
+        }
+        #header img{
+            padding-left: 35%;
+            padding-top: 3px;
         }
         #container {
             display: inline-block;
@@ -117,7 +132,7 @@
             background-color: white;
             box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
             position: absolute;
-            top: 100%;
+            top: 102%;
             width: 50%;
             height: 60%;
             border-radius: 20px;
@@ -136,15 +151,14 @@
             margin-top: 20px;
         }
         #footer {
-        background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 20px;
-        position: absolute;
-        top: 170%;
-        bottom: 0;
-        width: 100%;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: absolute;
+            top: 175%;
+            bottom: 0;
+            width: 100%;
         }
         #footer p{
             margin: -8px;
@@ -152,7 +166,10 @@
     </style>
 </head>
 <body>
-    <h1>Employee Management System</h1>
+    <div id="header">
+        <img src="logo.jpg" alt="" height="43px" width="43px">
+        <h1>Employee Management System</h1>
+    </div>
     <div id="container">
         <div id="home">
             <p><a href="home.html">Home</a></p>
