--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             background: linear-gradient(80deg, #108dc7, #c779d0);
         }
         #container{
-            background-color: white;
+            background-color: rgb(249, 249, 242);
             text-align: center;
             justify-content: center;
             position: absolute;
