--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
             background: linear-gradient(80deg, #10e1d7, #ab20eb);
         }
         #container{
-            background-color: white;
+            background-color: rgb(249, 249, 242);
             text-align: center;
             justify-content: center;
             position: absolute;
