--- a/Project/contact.html
+++ b/Project/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home-EMS</title>
+    <title>Contact-EMS</title>
     <style>
         body {
             background-color: #f4f4f4;
