--- a/Project/signup.html
+++ b/Project/signup.html
@@ -79,8 +79,8 @@
         <input type="text" required>
         <label>Last Name</label><br>
         <input type="text" required>
-        <label>DOB</label><br>
-        <input type="date" required>
+        <label>Email address</label><br>
+        <input type="text" required>
         <label>User Name</label><br>
         <input type="text" required>
         <label>Password</label><br>
