--- a/Project/contact.html
+++ b/Project/contact.html
@@ -163,8 +163,8 @@
     </div>
     <div id="container2">
         <p><b>Email:</b> ems_support@gmail.com <br><br>
-            <b>Phone:</b> +91 1234567890 <br><br>
-            <b>Address:</b> Street No.123, Hyderabad, India</p>
+            <b>Phone:</b> +91 9391013550 <br><br>
+            <b>Address:</b> Vastunagar, Mangalpalli, Hyderabad, India</p>
     </div>
     <footer>
         <div class="container">
