--- a/JS-Project/index.html
+++ b/JS-Project/index.html
@@ -30,6 +30,6 @@
         </div>
     </div>
     <button>Play Your Move</button>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
