--- a/JS-Project/sample.html
+++ b/JS-Project/sample.html
@@ -3,32 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <p>Toggle button click me to switch on dark mode.</p>
-    <div id="parent">
-        <div id="child">
-            
+    <div id="container">
+        <div id="left">
+            <img src="logo.jpg" alt="" width="50px" height="50px">
+            <h2>Sample Web Page</h2>
         </div>
-    </div> -->
-    <div id="msg-container">
-        <p id="msg"></p>
+        <div id="right">
+            <a href="sample.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="login.html">Login</a>
+            <a href="signup.html">Signup</a>
+        </div>
     </div>
-    <h1>Tic-Tac-Toe Game</h1>
-    <div id="boxes">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div> 
+    <div id="items">
+        <div class="item">
+            <img src="img1.jpg" alt="" width="100px" height="100px">
+            <p>Nature is the beautiful and dynamic world around us, filled with mountains, forests, oceans, and wildlife.</p>
+        </div>
+        <div class="item">
+            <img src="img2.jpg" alt="" width="100px" height="100px">
+            <p>It provides us with clean air, fresh water, and countless resources that sustain life.</p>
+        </div>
+        <div class="item">
+            <img src="img3.jpg" alt="" width="100px" height="100px">
+            <p>Observing nature helps us find peace, inspiration, and a deeper connection to the planet.</p>
+        </div>
+        <div class="item">
+            <img src="img1.jpg" alt="" width="100px" height="100px">
+            <p>Nature constantly changes with the seasons, showcasing its beauty through blooming flowers, falling leaves, and snowy landscapes.</p>
+        </div>
+        <div class="item">
+            <img src="img2.jpg" alt="" width="100px" height="100px">
+            <p>It is home to countless species, each playing a role in maintaining the balance of ecosystems.</p>
+        </div>
+        <div class="item">
+            <img src="img3.jpg" alt="" width="100px" height="100px">
+            <p>Protecting nature is essential for preserving the earth for future generations.</p>
+        </div>
     </div>
-    <button class="reset">Reset Game</button>
-    <script src="script.js"></script>
 </body>
 </html>
